fix prefix alignment according to design in case, of prefix contains text (#742)

--- a/src/Input/InputMixins.scss
+++ b/src/Input/InputMixins.scss
@@ -16,6 +16,7 @@
     .suffix {
         margin-top: -1px;
         height: $height;
+        line-height: $height;
     }
 }
 
